--- a/game.html
+++ b/game.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cattura i Regali di Natale (Funzionante)</title>
+    <title>Cattura i Regali di Natale</title>
     <style>
         body {
             display: flex;
@@ -79,8 +79,8 @@
     <div id="control-panel">
         <h3>🛠️ Pannello di Controllo Didattico</h3>
         <p>Modifica la **Gravità** (`GRAVITY_FACTOR`) in tempo reale per le tue lezioni:</p>
-        <label for="gravity-slider">Fattore Gravità (GRAVITY_FACTOR):</label>
-        <input type="range" id="gravity-slider" min="0.5" max="3.0" step="0.1" value="1.0">
+        <label for="gravity-slider">Fattore Gravità:</label>
+        <input type="range" id="gravity-slider" min="1.0" max="4.0" step="0.1" value="1.0">
         <span id="gravity-value">1.0</span>
         <button id="restart-button">Riavvia il Gioco</button>
     </div>
